[gd_scene load_steps=3 format=3 uid="uid://dihojvg2oqpkr"]

[ext_resource type="Script" path="res://Scenes/UI/Card.gd" id="1_3855f"]

[sub_resource type="FontVariation" id="FontVariation_aoixp"]
variation_embolden = 1.0

[node name="Card" type="Control"]
modulate = Color(0.75, 0.75, 0.75, 1)
custom_minimum_size = Vector2(140, 200)
layout_mode = 3
anchors_preset = 0
offset_right = 140.0
offset_bottom = 200.0
pivot_offset = Vector2(70, 100)
script = ExtResource("1_3855f")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="CardTitle" type="Label" parent="."]
custom_minimum_size = Vector2(130, 55)
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 135.0
offset_bottom = 60.0
mouse_filter = 1
theme_override_colors/font_color = Color(0.835294, 0.905882, 1, 1)
theme_override_constants/line_spacing = -4
theme_override_fonts/font = SubResource("FontVariation_aoixp")
theme_override_font_sizes/font_size = 16
text = "Card Name"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2
uppercase = true

[node name="CardDesc" type="Label" parent="."]
custom_minimum_size = Vector2(130, 130)
layout_mode = 2
offset_left = 5.0
offset_top = 65.0
offset_right = 135.0
offset_bottom = 195.0
size_flags_horizontal = 4
mouse_filter = 1
theme_override_constants/line_spacing = -4
theme_override_font_sizes/font_size = 14
text = "Body text describing card's effects"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
